<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/billAmt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/amt"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/billAmtInput"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noOfPax"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:text="@string/noofpax"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/noOfPaxInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.93"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/gst"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="@string/Disable1"
            android:textOn="@string/Enable1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/svc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.8"
            android:text="@string/Service"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/toggleButtonSVC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.2"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="@string/Disable2"
            android:textOn="@string/Enable2" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum1" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:gravity="center">

        <TextView
            android:id="@+id/pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pay"
            android:textColor="@color/colorAccent1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/payperperson"
            android:inputType="textPersonName" />

    </LinearLayout>



</LinearLayout>
